# logger

./: CMakeLists.txt  Log.hpp  Logger.cpp  Logger.hpp
include/logger/: Logger.hpp
src/logger/: Logger.cpp
